--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 .image-sidebar {
     color: white;
-    width: max(300px, 30vw);
+    width: 30vw;
     height: 100vh;
     background-image: url(./background.jpg);
     background-size: cover;
@@ -78,4 +78,71 @@ body {
 
 .intro-sub {
     font-family: 'Albert Sans', sans-serif;
+}
+
+.main-form {
+    background-color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.submit,
+.main-form,
+.login {
+    padding: 20px;
+    padding-left: 40px;
+    width: 70vw;
+}
+
+label {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+}
+
+fieldset {
+    border: 0;
+    display: flex;
+    gap: 20px;
+}
+
+fieldset > div {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+}
+
+input {
+    font-size: 0.9rem;
+    border-radius: 4px;
+    height: 1.7rem;
+    padding: 0 5px;
+    border-width: 1px;
+}
+
+input:valid {
+    border-color: blue;
+}
+
+input:invalid {
+    border-color: red;
+}
+
+button[type="submit"] {
+    padding: 10px 18px;
+    font-size: 0.9rem;
+    border-radius: 5px;
+    border-color: greenyellow;
+    color: white;
+    font-weight: bold;
+    background-color: green;
+}
+
+.login {
+    padding-top: -10px;
+}
+
+.login a {
+    color: green;
+    text-decoration: none;
 }
